basic information -ing

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>오성 포트폴리오</title>
-  <!-- <link rel="stylesheet" href="/css/reset.css"> -->
+  <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="">
-  <link href='https://fonts.googleapis.com/css2?family=Antonio:wght@100;200;300;400;500;600;700&family=Bruno+Ace+SC&family=Dokdo&family=Manrope&family=Noto+Sans+KR&family=Oswald&family=Pacifico&family=Pathway+Gothic+One&display=swap' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Noto+Sans+KR&family=Permanent+Marker&display=swap" rel="stylesheet">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css' integrity='sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==' crossorigin='anonymous'/>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js'></script>
 </head>
@@ -51,22 +51,29 @@
       <div id="motto_wrapper">
         <h2 class="hidden">Motto</h2>
         <div class="motto_text">
-          <p>GO GETTER</p>
-          <p>Go-Getter란 망설임 없이 무엇인가 도전을 하고, 성공을 위한 투지를 가지고, 야심을 가지는 열정적인 사람을 뜻합니다. 저는 다양한 분야에 끊임없이 도전하고 앞으로 헤엄치는 Go-Getter로 살아가기 위해 최선을 다하고 있습니다.</p>
+          <p class="mt_title">GO GETTER</p>
+          <p class="mt_text">Go-Getter란 망설임 없이 무엇인가 도전을 하고, 성공을 위한 투지를 가지고, 야심을 가지는 열정적인 사람을 뜻합니다. 저는 다양한 분야에 끊임없이 도전하고 앞으로 헤엄치는 Go-Getter로 살아가기 위해 최선을 다하고 있습니다.</p>
         </div>
         <div class="mt_bg_text">
           <p>GO GETTER</p>
           <p>GO GETTER</p>
         </div>
-        <div class="mt_bg_circle_left"></div>
-        <div class="mt_bg_circle_right"></div>
+        <div class="mt_bg_circle_left">
+          <div class="l_hole"></div>
+        </div>
+        <div class="mt_bg_circle_right">
+          <div class="r_hole"></div>
+        </div>
       </div>
     </section>
   
     <section id="basic_information">
       <div id="basic_information_wrapper">
+        <svg xmlns="http://www.w3.org/2000/svg" width="1920" height="1185" viewBox="0 0 1920 1185" fill="none">
+          <path d="M1923.51 0.635293L-8.32139e-05 238L7.58626e-05 1028.5L1923.51 1184.64L1923.51 0.635293Z" fill="#003CFF"/>
+        </svg>
         <h2 class="hidden">Basic Information</h2>
-        <div class="wrapper_blue">
+        <div class="infos_wrapper">
           <div class="info">
             <ul class="info_list">
               <li>
@@ -87,9 +94,9 @@
               </li>
               <li>
                 <p class="title">Contact</p>
-                <p class="text">osungcjh@gmail.com</p>
-                <p class="text">osungcjh@naver.com</p>
+                <p class="text">osungcjh@gmail.com<br/>osungcjh@naver.com</p>
               </li>
+              
             </ul>
           </div>
           <div class="my_pic">
@@ -97,7 +104,7 @@
           </div>
         </div>
         <div class="bi_bg_line_blue"></div>        
-        <div class="bi_bg_text_yellow">go getter</div>
+        <div class="bi_bg_text_yellow">GO GETTER</div>
         <div class="bi_bg_circle_yellow"></div>
       </div>
     </section>
