basic information css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>오성 포트폴리오</title>
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="/css/main_section.css">
+  <link rel="stylesheet" href="/css/motto_section.css">
+  <link rel="stylesheet" href="/css/basic_information_section.css">
   <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Noto+Sans+KR&family=Permanent+Marker&display=swap" rel="stylesheet">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css' integrity='sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==' crossorigin='anonymous'/>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js'></script>
@@ -100,12 +102,23 @@
             </ul>
           </div>
           <div class="my_pic">
-
+            <img src="/images/jihyun_picture.png" alt="최지현의 사진"/>
+            <div class="img_blue_cover"></div>
+            <div class="bi_bg_circle_yellow"></div>
           </div>
         </div>
-        <div class="bi_bg_line_blue"></div>        
-        <div class="bi_bg_text_yellow">GO GETTER</div>
-        <div class="bi_bg_circle_yellow"></div>
+        <div class="bi_bg_line_blue">
+          <svg xmlns="http://www.w3.org/2000/svg" width="1920" height="288" viewBox="0 0 1920 288" fill="none">
+            <path d="M-9.85923e-05 262.352L1950.43 25.436" stroke="url(#paint0_linear_45_399)" stroke-width="50" stroke-linecap="round"/>
+            <defs>
+              <linearGradient id="paint0_linear_45_399" x1="555.713" y1="-283.324" x2="1394.72" y2="571.112" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#003CFF"/>
+                <stop offset="1" stop-color="#003CFF" stop-opacity="0"/>
+              </linearGradient>
+            </defs>
+          </svg>
+        </div>        
+        <div class="bi_bg_text_yellow"><p>GO GETTER</p></div>
       </div>
     </section>
   
