--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/css/main_section.css">
   <link rel="stylesheet" href="/css/motto_section.css">
   <link rel="stylesheet" href="/css/basic_information_section.css">
+  <link rel="stylesheet" href="/css/skills_stacks_section.css">
   <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Noto+Sans+KR&family=Permanent+Marker&display=swap" rel="stylesheet">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css' integrity='sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==' crossorigin='anonymous'/>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js'></script>
@@ -126,7 +127,16 @@
       <div id="skills_and_stacks_wrapper">
         <h2 class="hidden">Skills and Stacks</h2>
         <div class="title_wrap">
-          <p>Skills & Stacks</p>
+          <p class="subtitle" id="skill">Skills & Stacks</p>
+          <svg xmlns="http://www.w3.org/2000/svg" width="433" height="20" viewBox="0 0 433 20" fill="none">
+            <path d="M10 20C4.47714 20 4.82823e-07 15.5229 0 10C-4.82823e-07 4.47719 4.47714 3.74627e-05 10 3.69798e-05L10 20ZM433 20L10 20L10 3.69798e-05L433 0L433 20Z" fill="url(#paint0_linear_59_432)"/>
+            <defs>
+              <linearGradient id="paint0_linear_59_432" x1="10" y1="59.9975" x2="433" y2="59.9975" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#003CFF"/>
+                <stop offset="1" stop-color="#003CFF" stop-opacity="0"/>
+              </linearGradient>
+            </defs>
+          </svg>
         </div>
         <div class="front_end_skills_wrap">
           <p class="skill_category">Front-End</p>
