scss global value

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
 <head>
+  <meta property="og:image" content="%PUBLIC_URL%/thumbnail.png" />
+  <meta property="og:site_name" content="오성 포트폴리오" />
+  <meta property="og:description" content="지현이가 만든 포트폴리오를 보고 칭찬해주세요." />
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>오성 포트폴리오</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/main_section.css">
@@ -234,7 +239,6 @@
               <li></li>
               <li></li>
               <li></li>
-              <li></li>
             </ul>
           </div>
         </div>
@@ -248,12 +252,12 @@
         <div class="about_me_inner">
           <div class="title_wrap">
             <p class="subtitle" id="aboutme">About Me</p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="249" height="20" viewBox="0 0 249 20" fill="none">
-              <path d="M239 20C244.523 20 249 15.5229 249 10C249 4.47717 244.523 2.13769e-05 239 2.0894e-05L239 20ZM-8.74228e-07 20L239 20L239 2.0894e-05L8.74228e-07 0L-8.74228e-07 20Z" fill="url(#paint0_linear_59_436)"/>
+            <svg xmlns="http://www.w3.org/2000/svg" width="275" height="21" viewBox="0 0 275 21" fill="none">
+              <path d="M264.962 20.9999C270.485 21.0209 274.979 16.5607 275 11.0379C275.021 5.51509 270.561 1.02101 265.038 1.00009L264.962 20.9999ZM0.962121 19.9999L264.962 20.9999L265.038 1.00009L1.03788 7.15256e-05L0.962121 19.9999Z" fill="url(#paint0_linear_59_436)"/>
               <defs>
-                <linearGradient id="paint0_linear_59_436" x1="239" y1="59.9975" x2="-1.90129e-06" y2="59.9975" gradientUnits="userSpaceOnUse">
-                  <stop stop-color="#FF9900"/>
-                  <stop offset="1" stop-color="#FF9900" stop-opacity="0"/>
+                <linearGradient id="paint0_linear_59_436" x1="264.811" y1="60.9971" x2="0.810616" y2="59.9971" gradientUnits="userSpaceOnUse">
+                  <stop stop-color="#FF5C00"/>
+                  <stop offset="1" stop-color="#FF5C00" stop-opacity="0"/>
                 </linearGradient>
               </defs>
             </svg>
@@ -269,14 +273,14 @@
             <div class="am_category" id="certificates">
               <p class="am_c_title">Certificates</p>
               <ul class="am_category_list" id="certificates_list">
-                <li>정교사 자격증</li>
-                <li>SW 코딩자격 2급</li>
-                <li>중국어 HSK 4급</li>
+                <li><p>정교사 자격증</p></li>
+                <li><p>SW 코딩자격 2급</p></li>
+                <li><p>중국어 HSK 4급</p></li>
               </ul>
             </div>
             <div class="am_category" id="hobbies">
               <p class="am_c_title">Hobbies</p>
-              <p>쉴 때는 무엇을 하는지 궁금하신가요? 저는 체육 활동을 좋아해서 시간이 나면 주로 운동을 합니다. 운동을 하면 정신이 맑아지고 삶의 활력이 생기거든요!</p>
+              <p class="am_c_subtitle">쉴 때는 무엇을 하는지 궁금하신가요? 저는 체육 활동을 좋아해서 시간이 나면 주로 운동을 합니다. 운동을 하면 정신이 맑아지고 삶의 활력이 생기거든요!</p>
               <div class="interests">
                 <p>Interests</p>
                 <ul class="am_category_list" id="hobbies_list">
@@ -303,10 +307,11 @@
         <div class="footer_inner">
           <p class="f_title">Contact</p>
           <ul class="sns_list">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><i class="fa-brands fa-instagram"></i></li>
+            <li><i class="fa-brands fa-linkedin"></i></li>
+            <li><i class="fa-brands fa-github"></i></li>
+            <li><i class="fa-regular fa-envelope"></i></li>
+            <li><i class="fa-solid fa-dollar-sign"></i></li>
           </ul>
           <p class="f_copyright">© 2023. Choi Ji Hyun. All rights reserved.</p>
         </div>
