projects orange stage

--- a/index.html
+++ b/index.html
@@ -189,38 +189,30 @@
     <section id="projects">
       <div id="projects_wrapper">
         <h2 class="hidden">My Projects</h2>
-        <div class="project_stage_wrapper">
-          <svg xmlns="http://www.w3.org/2000/svg" width="1920" height="739" viewBox="0 0 1920 739" fill="none">
-            <path d="M0 0.5L1920 290V739H0V0.5Z" fill="#FF9900"/>
-          </svg>
-          <div class="title_wrap">
-            <p class="subtitle" id="projects">Projects</p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="280" height="20" viewBox="0 0 280 20" fill="none">
-              <path d="M270 20C275.523 20 280 15.5229 280 10C280 4.47718 275.523 2.4087e-05 270 2.36041e-05L270 20ZM-8.74228e-07 20L270 20L270 2.36041e-05L8.74228e-07 0L-8.74228e-07 20Z" fill="url(#paint0_linear_59_435)"/>
-              <defs>
-                <linearGradient id="paint0_linear_59_435" x1="270" y1="59.9975" x2="-1.58097e-06" y2="59.9975" gradientUnits="userSpaceOnUse">
-                  <stop stop-color="#003CFF"/>
-                  <stop offset="1" stop-color="#003CFF" stop-opacity="0"/>
-                </linearGradient>
-              </defs>
-            </svg>
-            <div>
+        <svg xmlns="http://www.w3.org/2000/svg" width="1920" height="739" viewBox="0 0 1920 739" fill="none">
+          <path d="M0 0.5L1920 290V739H0V0.5Z" fill="#FF9900"/>
+        </svg>
+        <div class="project_orange_stage_wrapper">
+          <div class="project_orange_stage_inner">
+            <div class="title_wrap">
+              <p class="subtitle" id="projects">Projects</p>
+              <svg xmlns="http://www.w3.org/2000/svg" width="260" height="20" viewBox="0 0 260 20" fill="none">
+                <path d="M250 20C255.523 20 260 15.5228 260 10C260 4.47715 255.523 0 250 0V20ZM0 20H250V0H0V20Z" fill="url(#paint0_linear_59_435)"/>
+                <defs>
+                  <linearGradient id="paint0_linear_59_435" x1="250" y1="59.9975" x2="2.58329e-06" y2="59.9975" gradientUnits="userSpaceOnUse">
+                    <stop stop-color="#003CFF"/>
+                    <stop offset="1" stop-color="#003CFF" stop-opacity="0"/>
+                  </linearGradient>
+                </defs>
+              </svg>
+            </div>
+            <div class="project_view_wrapper">
               <div class="project_main_pic"></div>
               <div class="project_infos">
-                <p>App Name</p>
-                <p>주야간보호센터와 관련된 웹 사이트를 제작하였습니다. <br/>
+                <p class="p_name">App Name</p>
+                <p class="p_bodytext">주야간보호센터와 관련된 웹 사이트를 제작하였습니다. <br/>
                   최근 실버사업이 인기가 높은 사회적 분위기를 반영하여 제작했습니다. <br/>
                   이와 같은 웹 사이트를 소개하는 글을 여기에 적겠습니다.</p>
-                <div class="project_links">
-                  <ul>
-                    <li>
-                      <a>데모 웹사이트</a>
-                    </li>
-                    <li>
-                      <a>GitHub</a>
-                    </li>
-                  </ul>
-                </div>
                 <div class="projects_skill">
                   <ul>
                     <li>Mobile App</li>
@@ -229,9 +221,17 @@
                     <li>React.js</li>
                   </ul>
                 </div>
+                <div class="project_links">
+                  <ul>
+                    <a><li>데모 웹사이트</li></a>
+                    <a><li>GitHub</li></a>
+                  </ul>
+                </div>
+                
               </div>
             </div>
           </div>
+          
         </div>
         <div class="projects_list_wrapper">
           <div class="projects_list">
