--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/header.css">
   <link rel="stylesheet" href="/css/main_section.css">
   <link rel="stylesheet" href="/css/motto_section.css">
   <link rel="stylesheet" href="/css/basic_information_section.css">
@@ -19,7 +20,7 @@
   <link rel="stylesheet" href="/css/my_projects_section.css">
   <link rel="stylesheet" href="/css/about_me_section.css">
   <link rel="stylesheet" href="/css/contact_footer.css">
-  <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Noto+Sans+KR&family=Permanent+Marker&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Faster+One&family=Noto+Sans+KR&family=Permanent+Marker&display=swap" rel="stylesheet">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css' integrity='sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==' crossorigin='anonymous'/>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js'></script>
 </head>
@@ -35,10 +36,19 @@
         </a>
         <div class="menu">
           <ul class="menu_list">
-            <li>Skills & Stacks</li>
+            <li class="selected">Skills & Stacks</li>
             <li>Projects</li>
             <li>About Me</li>
           </ul>
+          <svg xmlns="http://www.w3.org/2000/svg" width="194" height="20" viewBox="0 0 194 20" fill="none">
+            <path d="M184 20C189.523 20 194 15.5228 194 9.99998C194 4.47714 189.523 -1.65686e-05 184 -1.60858e-05L184 20ZM8.74228e-07 20L184 20L184 -1.60858e-05L-8.74228e-07 0L8.74228e-07 20Z" fill="url(#paint0_linear_59_439)"/>
+            <defs>
+              <linearGradient id="paint0_linear_59_439" x1="184" y1="59.9975" x2="6.27222e-06" y2="59.9975" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#FF9900"/>
+                <stop offset="1" stop-color="#FF9900" stop-opacity="0"/>
+              </linearGradient>
+            </defs>
+          </svg>
         </div>
       </div>
     </header>
@@ -50,7 +60,7 @@
           
         </div>
         <div class="title">
-          <p>OSUNG JIHYUN</p>
+          <p>OSUNG<br/>JIHYUN</p>
         </div>
         <div class="bg_blues">
 
@@ -207,9 +217,11 @@
               </svg>
             </div>
             <div class="project_view_wrapper">
-              <div class="project_main_pic"></div>
+              <div class="project_main_pic">
+                <img src="images/project-01-main.png" alt="Love Silver 주야간보호센터 메인 사진" />
+              </div>
               <div class="project_infos">
-                <p class="p_name">App Name</p>
+                <p class="p_name">Love Silver 주야간보호센터</p>
                 <p class="p_bodytext">주야간보호센터와 관련된 웹 사이트를 제작하였습니다. <br/>
                   최근 실버사업이 인기가 높은 사회적 분위기를 반영하여 제작했습니다. <br/>
                   이와 같은 웹 사이트를 소개하는 글을 여기에 적겠습니다.</p>
@@ -237,6 +249,7 @@
           <div class="projects_list">
             <ul>
               <li></li>
+              <li class="selected"></li>
               <li></li>
               <li></li>
             </ul>
