--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css' integrity='sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==' crossorigin='anonymous'/>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js'></script>
   <script src="/ts/dist/basic_information_section.js"></script>
+  <script src="/ts/dist/contact_footer.js"></script>
 </head>
 <body>
   <div id="wrapper">
@@ -167,6 +168,9 @@
         </div>
         <div class="front_end_skills_wrap">
           <p class="skill_category">Front-End</p>
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="15" viewBox="0 0 18 15" fill="none">
+            <path d="M9 15L0.339747 -2.76018e-07L17.6603 -1.79022e-06L9 15Z" fill="#FF9900"/>
+          </svg>
           <ul class="front_end_skill_list">
             <li><p>HTML /<br/> CSS(SCSS)</p></li>
             <li><p>JavaScript</p></li>
@@ -331,12 +335,27 @@
         <div class="footer_inner">
           <p class="f_title">Contact</p>
           <ul class="sns_list">
-            <li><i class="fa-brands fa-instagram"></i></li>
-            <li><i class="fa-brands fa-linkedin"></i></li>
-            <li><i class="fa-brands fa-github"></i></li>
-            <li><i class="fa-regular fa-envelope"></i></li>
-            <li><i class="fa-solid fa-dollar-sign"></i></li>
+            <a href="https://www.instagram.com/osung_jihyun/" target="_blank">
+              <li><i class="fa-brands fa-instagram"></i></li>
+            </a>
+            <a href="https://www.linkedin.com/in/%EC%A7%80%ED%98%84-%EC%B5%9C-0b2661283/" target="_blank">
+              <li><i class="fa-brands fa-linkedin"></i></li>
+            </a>
+            <a href="https://github.com/Choi-Jihyun" target="_blank">
+              <li><i class="fa-brands fa-github"></i></li>
+            </a>
+            
+            <li id="email"><i class="fa-regular fa-envelope"></i></li>
+            <li id="bank"><i class="fa-solid fa-dollar-sign"></i></li>
           </ul>
+          <div id="modal" class="modal">
+            <div class="modal-content">
+              <span id="close"><i class="fa-solid fa-xmark"></i></span>
+              <div id='content'>
+                <!-- 모달 창에 들어갈 내용 -->
+              </div>
+            </div>
+          </div>
           <p class="f_copyright">© 2023. Choi Ji Hyun. All rights reserved.</p>
         </div>
       </div>
