--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             <a href="https://github.com/Choi-Jihyun" target="_blank">
               <li><i class="fa-brands fa-github"></i></li>
             </a>
-            
+
             <li id="email"><i class="fa-regular fa-envelope"></i></li>
             <li id="bank"><i class="fa-solid fa-dollar-sign"></i></li>
           </ul>
@@ -352,7 +352,24 @@
             <div class="modal-content">
               <span id="close"><i class="fa-solid fa-xmark"></i></span>
               <div id='content'>
-                <!-- 모달 창에 들어갈 내용 -->
+                <div>
+                  <p class="cf_email_title">이메일</p>
+                  <p class="cf_email_text">
+                      <span class="cf_email" id="cf_email_1">
+                          osungcjh@gmail.com
+                      </span>
+                      <br/>
+                      <span class="cf_email" id="cf_email_2">
+                          osungcjh@naver.com
+                      </span>
+                  </p>
+                  <p id="cf_alertCopy">이메일을 클릭하여 복사하세요.</p>
+                </div>
+                <div>
+                  <p>기분이 좋아져서 커피 한 잔 선물하고 싶으신가요?</p>
+                  <p>67591034946707 하나은행</p>
+                  <p>벌써 가슴이 두근거립니다. 감사합니다.</p>
+                </div>
               </div>
             </div>
           </div>
