--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
               <span id="close"><i class="fa-solid fa-xmark"></i></span>
               <div id='content'>
                 <div>
-                  <p class="cf_email_title">이메일</p>
+                  <p class="cf_email_title c_big_font">이메일</p>
                   <p class="cf_email_text">
                       <span class="cf_email" id="cf_email_1">
                           osungcjh@gmail.com
@@ -363,12 +363,13 @@
                           osungcjh@naver.com
                       </span>
                   </p>
-                  <p id="cf_alertCopy">이메일을 클릭하여 복사하세요.</p>
+                  <p class="cf_alertCopy" id="cf_alertCopy">이메일을 클릭하여 복사하세요.</p>
                 </div>
                 <div>
                   <p>기분이 좋아져서 커피 한 잔 선물하고 싶으신가요?</p>
-                  <p>67591034946707 하나은행</p>
+                  <p class="c_banknum c_big_font">67591034946707 하나은행</p>
                   <p>벌써 가슴이 두근거립니다. 감사합니다.</p>
+                  <p class="cf_alertCopy" id="cf_alertCopy2">계좌번호를 클릭하여 복사하세요.</p>
                 </div>
               </div>
             </div>
