--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                 </div>
                 <div>
                   <p>기분이 좋아져서 커피 한 잔 선물하고 싶으신가요?</p>
-                  <p class="c_banknum c_big_font">67591034946707 하나은행</p>
+                  <p class="c_banknum c_big_font">하나은행67591034946707</p>
                   <p>벌써 가슴이 두근거립니다. 감사합니다.</p>
                   <p class="cf_alertCopy" id="cf_alertCopy2">계좌번호를 클릭하여 복사하세요.</p>
                 </div>
