--- a/index.html
+++ b/index.html
@@ -65,7 +65,33 @@
           <p>OSUNG<br/>JIHYUN</p>
         </div>
         <div class="bg_blues">
-
+          <svg xmlns="http://www.w3.org/2000/svg" width="364" height="463" viewBox="0 0 364 463" fill="none">
+            <path d="M-141 41L308 392" stroke="url(#paint0_linear_33_404)" stroke-width="110" stroke-linecap="round"/>
+            <defs>
+            <linearGradient id="paint0_linear_33_404" x1="83.5" y1="56" x2="83.5" y2="407" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#003CFF"/>
+            <stop offset="1" stop-color="#003CFF" stop-opacity="0"/>
+            </linearGradient>
+            </defs>
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="364" height="463" viewBox="0 0 364 463" fill="none">
+            <path d="M-141 56L308 407" stroke="url(#paint0_linear_45_390)" stroke-width="110" stroke-linecap="round"/>
+            <defs>
+              <linearGradient id="paint0_linear_45_390" x1="83.5" y1="56" x2="83.5" y2="407" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#003CFF"/>
+                <stop offset="1" stop-color="#003CFF" stop-opacity="0"/>
+              </linearGradient>
+            </defs>
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="364" height="463" viewBox="0 0 364 463" fill="none">
+            <path d="M-141 56L308 407" stroke="url(#paint0_linear_45_391)" stroke-width="110" stroke-linecap="round"/>
+            <defs>
+              <linearGradient id="paint0_linear_45_391" x1="83.5" y1="56" x2="83.5" y2="407" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#003CFF"/>
+                <stop offset="1" stop-color="#003CFF" stop-opacity="0"/>
+              </linearGradient>
+            </defs>
+          </svg>
         </div>
       </div>
     </section>
@@ -326,6 +352,15 @@
             </div>
           </div>
         </div>
+        <div class="am_bgs">
+          <div class="am_bg_line">
+            <svg xmlns="http://www.w3.org/2000/svg" width="1920" height="893" viewBox="0 0 1920 893" fill="none">
+              <path d="M-24.4846 834.802C3.67016 780.901 65.835 562.263 132.846 541.237C173.874 528.364 177.805 601.019 192.72 732.064C207.636 863.109 339.836 970.455 464.71 777.208C589.584 583.961 587.013 372.01 473.471 407.635C359.929 443.261 571.556 780.366 742.832 708.285C914.108 636.203 672.291 166.864 1032 27.274C1391.71 -112.316 1609.08 656.685 1731 647.776C1852.93 638.866 1512.24 222.672 1731 201.719C1906.01 184.958 2130.22 303.938 2103.5 351.275" stroke="#FF9900" stroke-opacity="0.2" stroke-width="20" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </div>
+          <div class="am_bg_ball"></div>
+          <div class="am_bg_circle"></div>
+        </div>
       </div>
     </section>
 
@@ -367,8 +402,8 @@
                 </div>
                 <div>
                   <p>기분이 좋아져서 커피 한 잔 선물하고 싶으신가요?</p>
-                  <p class="c_banknum c_big_font">하나은행67591034946707</p>
-                  <p>벌써 가슴이 두근거립니다. 감사합니다.</p>
+                  <p class="c_banknum c_big_font">하나은행 67591034946707</p>
+                  <p>벌써 가슴이 두근거립니다. <br/>감사합니다.</p>
                   <p class="cf_alertCopy" id="cf_alertCopy2">계좌번호를 클릭하여 복사하세요.</p>
                 </div>
               </div>
