--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               </li>
               <li>
                 <p class="title">Education</p>
-                <p class="text">공주교육대학교(컴퓨터교육학)</p>
+                <p class="text">공주교육대학교<br/>컴퓨터교육학</p>
               </li>
               <li>
                 <p class="title">Contact</p>
