--- a/index.html
+++ b/index.html
@@ -58,23 +58,23 @@
     <section id="main">
       <div id="main_wrapper">
         <h2 class="hidden">Main</h2>
-        <div class="running_osung">
-          
+        <div class="running_osung_wrapper">
+          <div class="me"></div>
         </div>
         <div class="title">
           <p>OSUNG<br/>JIHYUN</p>
         </div>
         <div class="bg_blues">
-          <svg xmlns="http://www.w3.org/2000/svg" width="364" height="463" viewBox="0 0 364 463" fill="none">
+          <svg class="m_svg_1" xmlns="http://www.w3.org/2000/svg" width="364" height="463" viewBox="0 0 364 463" fill="none">
             <path d="M-141 41L308 392" stroke="url(#paint0_linear_33_404)" stroke-width="110" stroke-linecap="round"/>
-            <defs>
-            <linearGradient id="paint0_linear_33_404" x1="83.5" y1="56" x2="83.5" y2="407" gradientUnits="userSpaceOnUse">
-            <stop stop-color="#003CFF"/>
-            <stop offset="1" stop-color="#003CFF" stop-opacity="0"/>
-            </linearGradient>
-            </defs>
+              <defs>
+                <linearGradient id="paint0_linear_33_404" x1="83.5" y1="56" x2="83.5" y2="407" gradientUnits="userSpaceOnUse">
+                  <stop stop-color="#003CFF"/>
+                  <stop offset="1" stop-color="#003CFF" stop-opacity="0"/>
+                </linearGradient>
+              </defs>
           </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" width="364" height="463" viewBox="0 0 364 463" fill="none">
+          <svg class="m_svg_1" xmlns="http://www.w3.org/2000/svg" width="364" height="463" viewBox="0 0 364 463" fill="none">
             <path d="M-141 56L308 407" stroke="url(#paint0_linear_45_390)" stroke-width="110" stroke-linecap="round"/>
             <defs>
               <linearGradient id="paint0_linear_45_390" x1="83.5" y1="56" x2="83.5" y2="407" gradientUnits="userSpaceOnUse">
@@ -83,7 +83,7 @@
               </linearGradient>
             </defs>
           </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" width="364" height="463" viewBox="0 0 364 463" fill="none">
+          <svg class="m_svg_1" xmlns="http://www.w3.org/2000/svg" width="364" height="463" viewBox="0 0 364 463" fill="none">
             <path d="M-141 56L308 407" stroke="url(#paint0_linear_45_391)" stroke-width="110" stroke-linecap="round"/>
             <defs>
               <linearGradient id="paint0_linear_45_391" x1="83.5" y1="56" x2="83.5" y2="407" gradientUnits="userSpaceOnUse">
@@ -135,7 +135,7 @@
               </li>
               <li>
                 <p class="title">Address</p>
-                <p class="text">서울특별시 강남구</p>
+                <p class="text">South Korea,<br/>서울특별시 강남구</p>
               </li>
               <li>
                 <p class="title">Education</p>
@@ -354,7 +354,7 @@
         </div>
         <div class="am_bgs">
           <div class="am_bg_line">
-            <svg xmlns="http://www.w3.org/2000/svg" width="1920" height="893" viewBox="0 0 1920 893" fill="none">
+            <svg class="am_bg_svg" xmlns="http://www.w3.org/2000/svg" width="1920" height="893" viewBox="0 0 1920 893" fill="none">
               <path d="M-24.4846 834.802C3.67016 780.901 65.835 562.263 132.846 541.237C173.874 528.364 177.805 601.019 192.72 732.064C207.636 863.109 339.836 970.455 464.71 777.208C589.584 583.961 587.013 372.01 473.471 407.635C359.929 443.261 571.556 780.366 742.832 708.285C914.108 636.203 672.291 166.864 1032 27.274C1391.71 -112.316 1609.08 656.685 1731 647.776C1852.93 638.866 1512.24 222.672 1731 201.719C1906.01 184.958 2130.22 303.938 2103.5 351.275" stroke="#FF9900" stroke-opacity="0.2" stroke-width="20" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
           </div>
