--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="/css/basic_information_section.css">
   <link rel="stylesheet" href="/css/skills_stacks_section.css">
   <link rel="stylesheet" href="/css/my_projects_section.css">
+  <link rel="stylesheet" href="/css/my_projects_swiper.css">
   <link rel="stylesheet" href="/css/about_me_section.css">
   <link rel="stylesheet" href="/css/contact_footer.css">
   <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Faster+One&family=Noto+Sans+KR&family=Orbitron&family=Permanent+Marker&display=swap" rel="stylesheet">
@@ -285,13 +286,19 @@
           
         </div>
         <div class="projects_list_wrapper">
+          <div><button class="swiper-button-prev swiper-button-disabled">왼쪽 버튼</button></div>
           <div class="projects_list">
-            <ul>
-              <li></li>
-              <li class="selected"></li>
-              <li></li>
-              <li></li>
-            </ul>
+            <swiper-container class="mySwiper" pagination="true" pagination-type="progressbar" navigation="true" slides-per-view="3.4" free-mode="true" space-between="50">
+              <swiper-slide>Slide 1</swiper-slide>
+              <swiper-slide class="selected">Slide 2</swiper-slide>
+              <swiper-slide>Slide 3</swiper-slide>
+              <swiper-slide>Slide 4</swiper-slide>
+              <swiper-slide>Slide 5</swiper-slide>
+              <swiper-slide>Slide 6</swiper-slide>
+            </swiper-container>
+          
+            <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
+
           </div>
           <div class="pj_bg_text">
             <span id="pbt_1">UN</span><span id="pbt_2">STOPP</span><span id="pbt_3">ABLE</span>
