project modal window

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               </li>
               <li>
                 <p class="title">Education</p>
-                <p class="text">공주교육대학교<br/>컴퓨터교육학</p>
+                <p class="text">공주교육대학교<br/>컴퓨터교육학(4.06/4.5)</p>
               </li>
               <li>
                 <p class="title">Contact</p>
@@ -221,7 +221,7 @@
             </li>
             <li>
               <p class="skill_category">Mobile App</p>
-              <p class="skill_name">Flutter</p>
+              <p class="skill_name">SwiftUI<br/>Flutter</p>
             </li>
             <li>
               <p class="skill_category">Design</p>
@@ -239,6 +239,8 @@
       </div>
     </section>
   
+
+    
     <section id="projects">
       <div id="projects_wrapper">
         <h2 class="hidden">My Projects</h2>
@@ -264,6 +266,7 @@
                 <li class="selected">
                   <div class="project_main_pic">
                     <img src="images/project-01-main.png" alt="Love Silver 주야간보호센터 메인 사진" />
+                    <div class="mouseover"></div>
                   </div>
                   <div class="project_infos">
                     <p class="p_name">Love Silver 주야간보호센터</p>
@@ -454,8 +457,10 @@
             <div class="am_category" id="awards">
               <p class="am_c_title">Awards</p>
               <ul class="am_category_list" id="awards_list">
+                <li><p><span>2022</span>전국교대 육상경기대회 100m·400계주 신기록</p></li>
+                <li><p><span>2021</span>교육정보화 연구 대회 대상</p></li>
                 <li><p><span>2021</span>SW·AI 에듀톤 한국과학창의재단 이사장상</p></li>
-                <li><p><span>2020</span>Microsoft Teams를 활용한 슬기로운 대학생할 공모전 대상</p></li>
+                <li><p><span>2020</span>Microsoft Teams 활용 공모전 대상</p></li>
               </ul>
             </div>
             <div class="am_category" id="certificates">
@@ -463,6 +468,7 @@
               <ul class="am_category_list" id="certificates_list">
                 <li><p>정교사 자격증</p></li>
                 <li><p>SW 코딩자격 2급</p></li>
+                <li><p>영어 OPIc AL</p></li>
                 <li><p>중국어 HSK 4급</p></li>
               </ul>
             </div>
