--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script src="/ts/dist/basic_information_section.js"></script>
   <script src="/ts/dist/my_projects_section.js"></script>
   <script src="/ts/dist/contact_footer.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js'></script>
 </head>
 <body>
   <div id="wrapper">
@@ -263,7 +264,7 @@
             </div>
             <div class="project_view_wrapper">
               <ul class="project_info_list">
-                <li class="selected">
+                <!-- <li class="selected">
                   <div class="project_main_pic">
                     <img src="images/project-01-main.png" alt="Love Silver 주야간보호센터 메인 사진" />
                     <div class="mouseover"></div>
@@ -406,7 +407,7 @@
                       </ul>
                     </div>
                   </div>
-                </li>
+                </li> -->
               </ul>
 
             </div>
