--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js'></script>
   <script src="/ts/dist/header.js"></script>
   <script src="/ts/dist/basic_information_section.js"></script>
+  <script src="/ts/dist/skill_stacks_section.js"></script>
   <script src="/ts/dist/my_projects_section.js"></script>
   <script src="/ts/dist/contact_footer.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js'></script>
@@ -157,7 +158,6 @@
                 </p>
                 <p id="alertCopy"></p>
               </li>
-              
             </ul>
           </div>
           <div class="my_pic">
@@ -263,153 +263,9 @@
               </svg>
             </div>
             <div class="project_view_wrapper">
-              <ul class="project_info_list">
-                <!-- <li class="selected">
-                  <div class="project_main_pic">
-                    <img src="images/project-01-main.png" alt="Love Silver 주야간보호센터 메인 사진" />
-                    <div class="mouseover"></div>
-                  </div>
-                  <div class="project_infos">
-                    <p class="p_name">Love Silver 주야간보호센터</p>
-                    <p class="p_bodytext">주야간보호센터와 관련된 웹앱을 제작했습니다.<br/>
-                      최근 대한민국 노인 비율의 증가로 인해 실버 사업이 각광받고 있습니다. 실버 시장이 커지기에, 이와 같은 사이트를 제작해보았습니다.
-                      React.js 기반으로 제작하고 Firebase로 기능을 강화했습니다.</p>
-                    <div class="projects_skill">
-                      <ul>
-                        <li>Mobile App</li>
-                        <li>Web</li>
-                        <li>React.js</li>
-                        <li>Firebase</li>
-                      </ul>
-                    </div>
-                    <div class="project_links">
-                      <ul>
-                        <a href="https://lovesilver.netlify.app/" target='_blank'><li><i class="fa-solid fa-globe"></i> 데모 웹사이트</li></a>
-                        <a href="https://github.com/Choi-Jihyun/LoveSilver-ReactProject01" target='_blank'><li><i class="fa-brands fa-github"></i> GitHub</li></a>
-                      </ul>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="project_main_pic">
-                    <img src="images/project-02-main.png" alt="마린세르 메인 사진" />
-                  </div>
-                  <div class="project_infos">
-                    <p class="p_name">마린세르</p>
-                    <p class="p_bodytext">팀프로젝트로 마린세르 브랜드와 관련된 웹을 제작하였습니다. <br/>
-                      최근 실버사업이 인기가 높은 사회적 분위기를 반영하여 제작했습니다. <br/>
-                      이와 같은 웹 사이트를 소개하는 글을 여기에 적겠습니다.</p>
-                    <div class="projects_skill">
-                      <ul>
-                        <li>Mobile App</li>
-                        <li>Web</li>
-                        <li>git 협업</li>
-                        <li>JavaScript</li>
-                      </ul>
-                    </div>
-                    <div class="project_links">
-                      <ul>
-                        <a href="" target="_blank"><li><i class="fa-solid fa-globe"></i> 데모 웹사이트</li></a>
-                        <a href="https://github.com/Choi-Jihyun/web_donguibogam" target="_blank"><li><i class="fa-brands fa-github"></i> GitHub</li></a>
-                      </ul>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="project_main_pic">
-                    <img src="images/project-03-main.png" alt="동의보감 한의원 메인 사진" />
-                  </div>
-                  <div class="project_infos">
-                    <p class="p_name">동의보감 한의원</p>
-                    <p class="p_bodytext">동의보감 한의원 웹 사이트를 제작하였습니다. <br/>
-                      병원의 특성상 웹 접근성을 신경써서 제작하였습니다.<br/>
-                      이와 같은 웹 사이트를 소개하는 글을 여기에 적겠습니다.</p>
-                    <div class="projects_skill">
-                      <ul>
-                        <li>Mobile App</li>
-                        <li>Web</li>
-                        <li>HTML/CSS</li>
-                        <li>JavaScript</li>
-                      </ul>
-                    </div>
-                    <div class="project_links">
-                      <ul>
-                        <a href="" target="_blank"><li><i class="fa-solid fa-globe"></i> 데모 웹사이트</li></a>
-                        <a href="https://github.com/Choi-Jihyun/minjihaji_project" target="_blank"><li><i class="fa-brands fa-github"></i> GitHub</li></a>
-                      </ul>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="project_main_pic">
-                    <img src="images/project-04-main.png" alt="굿모닝 외과 메인 사진" />
-                  </div>
-                  <div class="project_infos">
-                    <p class="p_name">굿모닝 외과</p>
-                    <p class="p_bodytext">굿모닝 외과 웹 사이트를 제작하였습니다. <br/>
-                      병원의 특성상 웹 접근성을 신경써서 제작하였습니다. <br/>
-                      이와 같은 웹 사이트를 소개하는 글을 여기에 적겠습니다.</p>
-                    <div class="projects_skill">
-                      <ul>
-                        <li>Mobile App</li>
-                        <li>Web</li>
-                        <li>HTML/CSS</li>
-                        <li>JavaScript</li>
-                      </ul>
-                    </div>
-                    <div class="project_links">
-                      <ul>
-                        <a href="" target="_blank"><li><i class="fa-solid fa-globe"></i> 데모 웹사이트</li></a>
-                        <a href="https://github.com/Choi-Jihyun/web_goodmorning" target="_blank"><li><i class="fa-brands fa-github"></i> GitHub</li></a>
-                      </ul>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="project_infos">
-                    <p class="p_name">WOONTIN</p>
-                    <p class="p_bodytext">운동 루틴을 공유하는 웹앱을 제작하였습니다. <br/>
-                      최근 운동에 대한 인기가 높은 사회적 분위기를 반영하여 제작했습니다. <br/>
-                      이와 같은 웹 사이트를 소개하는 글을 여기에 적겠습니다.</p>
-                    <div class="projects_skill">
-                      <ul>
-                        <li>Mobile App</li>
-                        <li>Web</li>
-                        <li>React.js</li>
-                        <li>Scss</li>
-                      </ul>
-                    </div>
-                    <div class="project_links">
-                      <ul>
-                        <a><li><i class="fa-solid fa-globe"></i> 데모 웹사이트</li></a>
-                        <a><li><i class="fa-brands fa-github"></i> GitHub</li></a>
-                      </ul>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="project_infos">
-                    <p class="p_name">PORTFOLIO</p>
-                    <p class="p_bodytext">
-                      지금 현재 보고 계시는 사이트를 제작하였습니다. <br/>
-                    </p>
-                    <div class="projects_skill">
-                      <ul>
-                        <li>Mobile App</li>
-                        <li>Web</li>
-                        <li>Scss</li>
-                        <li>TypeScript</li>
-                      </ul>
-                    </div>
-                    <div class="project_links">
-                      <ul>
-                        <a href="" target="_blank"><li><i class="fa-brands fa-github"></i> GitHub</li></a>
-                      </ul>
-                    </div>
-                  </div>
-                </li> -->
-              </ul>
-
+              <div class="project_info_list">
+                <!-- axios로 들여올 자리 -->
+              </div>
             </div>
           </div>
           
