--- a/project_content/project_overview06.html
+++ b/project_content/project_overview06.html
@@ -1,4 +1,4 @@
-<li>
+<div>
   <div class="project_infos">
     <p class="p_name">PORTFOLIO</p>
     <p class="p_bodytext">
@@ -18,4 +18,4 @@
       </ul>
     </div>
   </div>
-</li>
+</div>
