--- a/project_content/project_overview01.html
+++ b/project_content/project_overview01.html
@@ -1,4 +1,4 @@
-<li class="selected">
+<div>
   <div class="project_main_pic">
     <img src="images/project-01-main.png" alt="Love Silver 주야간보호센터 메인 사진" />
     <div class="mouseover"></div>
@@ -23,4 +23,4 @@
       </ul>
     </div>
   </div>
-</li>
+</div>
