--- a/project_content/project_overview02.html
+++ b/project_content/project_overview02.html
@@ -1,4 +1,4 @@
-<li>
+<div>
   <div class="project_main_pic">
     <img src="images/project-02-main.png" alt="마린세르 메인 사진" />
   </div>
@@ -22,4 +22,4 @@
       </ul>
     </div>
   </div>
-</li>
+</div>
