--- a/project_content/project_overview03.html
+++ b/project_content/project_overview03.html
@@ -1,4 +1,4 @@
-<li>
+<div>
   <div class="project_main_pic">
     <img src="images/project-03-main.png" alt="동의보감 한의원 메인 사진" />
   </div>
@@ -22,5 +22,5 @@
       </ul>
     </div>
   </div>
-</li>
+</div>
 
