--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
   <link rel="stylesheet" href="/css/about_me_section.css">
   <link rel="stylesheet" href="/css/contact_footer.css">
   <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Faster+One&family=Noto+Sans+KR&family=Orbitron&family=Permanent+Marker&display=swap" rel="stylesheet">
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css' integrity='sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==' crossorigin='anonymous'/>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js'></script>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css'/>
   <script src="/ts/dist/header.js"></script>
   <script src="/ts/dist/basic_information_section.js"></script>
   <script src="/ts/dist/skill_stacks_section.js"></script>
   <script src="/ts/dist/my_projects_section.js"></script>
   <script src="/ts/dist/contact_footer.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/ScrollTrigger/1.0.6/ScrollTrigger.min.js'></script>
 </head>
 <body>
   <div id="wrapper">
