hover click complete

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
   <script src="/ts/dist/basic_information_section.js"></script>
   <script src="/ts/dist/skill_stacks_section.js"></script>
   <script src="/ts/dist/my_projects_section.js"></script>
+  <script src="/ts/dist/about_me_section.js"></script>
   <script src="/ts/dist/contact_footer.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/ScrollTrigger/1.0.6/ScrollTrigger.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js'></script>
 </head>
 <body>
   <div id="wrapper">
