--- a/project_content/project_overview04.html
+++ b/project_content/project_overview04.html
@@ -1,6 +1,6 @@
 <div>
   <div class="project_main_pic">
-    <img src="images/project-04-main.png" alt="굿모닝 외과 메인 사진" />
+    <img src="/images/project-04-main.png" alt="굿모닝 외과 메인 사진" />
   </div>
   <div class="project_infos">
     <p class="p_name">굿모닝 외과</p>
