--- a/project_content/project_overview01.html
+++ b/project_content/project_overview01.html
@@ -1,6 +1,6 @@
 <div>
   <div class="project_main_pic">
-    <img src="images/project-01-main.png" alt="Love Silver 주야간보호센터 메인 사진" />
+    <img src="/images/project-01-main.png" alt="Love Silver 주야간보호센터 메인 사진" />
     <div class="mouseover"></div>
   </div>
   <div class="project_infos">
