--- a/project_content/project_overview03.html
+++ b/project_content/project_overview03.html
@@ -1,6 +1,6 @@
 <div>
   <div class="project_main_pic">
-    <img src="images/project-03-main.png" alt="동의보감 한의원 메인 사진" />
+    <img src="/images/project-03-main.png" alt="동의보감 한의원 메인 사진" />
   </div>
   <div class="project_infos">
     <p class="p_name">동의보감 한의원</p>
