hover detail complete0.1

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               </svg>
             </div>
             <div class="project_view_wrapper">
-              <div class="project_info_list">
+              <div class="project_view">
                 <!-- axios로 들여올 자리 -->
               </div>
             </div>
@@ -279,8 +279,8 @@
               <li></li>
               <li></li>
               <li></li>
-              <li>운틴</li>
-              <li>포트폴리오</li>
+              <li>운틴 제작 중</li>
+              <li>포트폴리오 제작 중</li>
             </ul>
           </div>
         </div>
