--- a/project_content/project_overview06.html
+++ b/project_content/project_overview06.html
@@ -1,4 +1,7 @@
 <div>
+  <div class="project_main_pic">
+    <div class="mouseover"></div>
+  </div>
   <div class="project_infos">
     <p class="p_name">PORTFOLIO</p>
     <p class="p_bodytext">
