--- a/project_content/project_overview05.html
+++ b/project_content/project_overview05.html
@@ -1,4 +1,7 @@
 <div>
+  <div class="project_main_pic">
+    <div class="mouseover"></div>
+  </div>
   <div class="project_infos">
     <p class="p_name">WOONTIN</p>
     <p class="p_bodytext">운동 루틴을 공유하는 웹앱을 제작하였습니다. <br/>
