--- a/index.html
+++ b/index.html
@@ -288,9 +288,14 @@
             <div id="detail_content">
               <div class="detail-slider">
                 <button id="ol_close_btn"><i class="fa-solid fa-xmark"></i></button>
-                <a href="#" class="detail-slider__button">READ MORE</a>
-                <div class="detail-slider__wrp swiper-wrapper">
 
+                <div class="axios_swiper_wrapper">
+                  
+                  <!-- axios 들어올 자리 -->
+
+                </div>
+                <!-- <a href="#" class="detail-slider__button">READ MORE</a>
+                <div class="detail-slider__wrp swiper-wrapper">
 
                   <div class="detail-slider__item swiper-slide">
                     <div class="detail-slider__img">
@@ -339,7 +344,7 @@
                   </div>
                 
                 </div>
-                <div class="detail-slider__pagination"></div>
+                <div class="detail-slider__pagination"></div> -->
 
               </div>
             </div>
