--- a/project_content/project_details/project_detail01.html
+++ b/project_content/project_details/project_detail01.html
@@ -1,5 +1,5 @@
+<a href="#" class="detail-slider__button">READ MORE</a>
 <div class="detail-slider__wrp swiper-wrapper">
-
 
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
@@ -11,7 +11,7 @@
       <div class="detail-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?</div>
     </div>
   </div>
-
+  
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
       <img src="/images/projects/detail_01_02.png" alt="">
@@ -23,7 +23,7 @@
         또한, 적응형 웹사이트를 구현한 경험이 어려웠지만, 사용자들의 다양한 기기와 화면 크기에 맞춰 최상의 경험을 제공하기 위해 적응형을 채택했습니다.</div>
     </div>
   </div>
-
+  
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
       <img src="/images/projects/detail_01_03.png" alt="">
@@ -35,7 +35,7 @@
         또한, 병원의 특성상 다양한 환자가 있습니다. 그 중에는 시각 장애인도 포함되는데 이러한 사람들도 웹 사이트를 편리하게 사용할 수 있을 수 있도록 웹 접근성에 신경썼습니다.</div>
     </div>
   </div>
-
+  
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
       <img src="/images/projects/detail_01_03.png" alt="">
@@ -46,6 +46,6 @@
       <div class="detail-slider__text">자바스크립트를 활용하여 네비게이션 슬라이드 컨텐츠, 메뉴 바, 스크롤 기능을 구현했습니다. 이를 통해 사용자들이 웹사이트를 보다 쉽고 편리하게 탐색할 수 있도록 하였습니다.</div>
     </div>
   </div>
-
+  
 </div>
 <div class="detail-slider__pagination"></div>
