basic pic important

--- a/index.html
+++ b/index.html
@@ -283,14 +283,14 @@
           <div class="button-next"><i class="fa-solid fa-chevron-right"></i></div>
         </div>
 
-        <div id="over_layer" style="display: block">
+        <div id="over_layer" style="display: none">
           <div id="detail_content_wrapper">
             <div id="detail_content">
               <div class="detail-slider">
                 <button id="ol_close_btn"><i class="fa-solid fa-xmark"></i></button>
 
                 <div class="axios_swiper_wrapper">
-                  
+
                   <!-- axios 들어올 자리 -->
 
                 </div>
@@ -473,12 +473,12 @@
         </div>
       </div>
     </footer>
-    <div id="gray_layer" style="display: block"></div>
+    <div id="gray_layer" style="display: none"></div>
     
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-  <script>
+  <!-- <script>
     var swiper = new Swiper('.detail-slider', {
       spaceBetween: 30,
       effect: 'fade',
@@ -492,6 +492,6 @@
         clickable: true,
       }
     });
-  </script>
+  </script> -->
 </body>
 </html>
