--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             <div class="am_category" id="awards">
               <p class="am_c_title">Awards</p>
               <ul class="am_category_list" id="awards_list">
-                <li><p><span>2022</span>전국교대 육상경기대회 100m·400계주 신기록</p></li>
+                <li><p><span>2022</span>전국교대 육상경기 100m·400계주 신기록</p></li>
                 <li><p><span>2021</span>교육정보화 연구 대회 대상</p></li>
                 <li><p><span>2021</span>SW·AI 에듀톤 한국과학창의재단 이사장상</p></li>
                 <li><p><span>2020</span>Microsoft Teams 활용 공모전 대상</p></li>
