--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css'/>
   <script src="/ts/dist/header.js"></script>
   <script src="/ts/dist/main_section.js"></script>
+  <script src="/ts/dist/motto_section.js"></script>
   <script src="/ts/dist/basic_information_section.js"></script>
   <script src="/ts/dist/skill_stacks_section.js"></script>
   <script src="/ts/dist/my_projects_section.js"></script>
